# ESP32-Instax-Bridge

./: .gitignore  BLE_ADVERTISING_ANALYSIS.md  Bluetooth_Practical_Guide.md  CLAUDE.md  CMakeLists.txt  EXPERIMENTATION_LOG.md  EXPERIMENT_STATUS.md  INSTALL_ESP_IDF.md  INSTAX_PROTOCOL.md  LICENSE.md  OFFICIAL_APP_COMPATIBILITY.md  README.md  SESSION_SUMMARY_2025-11-30.md  SQUARE_LINK_FINDINGS.md  STATUS.md  build.sh  fix_build.py  partitions.csv  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.esp32dev
Bluetooth Packet Capture/: decode_pklg.py  decoded_mini_link3.txt  iPhone_INSTAX_capture-2.pklg  iPhone_INSTAX_capture-3.pklg  iPhone_INSTAX_capture.pklg  psd_to_pcap.py  ti_psd_parser.py
Bluetooth Packet Capture/Texas Instruments Source Capture DO NOT USE/: INSTAX_Square_App_Connection.psd
data/: INSTAX_PROTOCOL.md  README.md
main/: CMakeLists.txt  ble_peripheral.c  ble_peripheral.h  ble_scanner.c  ble_scanner.h  console.c  console.h  instax_protocol.c  instax_protocol.h  main.c  printer_emulator.c  printer_emulator.h  spiffs_manager.c  spiffs_manager.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
